--- a/Project/WebContent/projectStyle.css
+++ b/Project/WebContent/projectStyle.css
@@ -86,7 +86,7 @@ body{
 	background-color:#ffffff;
 	width:100%;
 	height:100%;
-	padding:1%;
+	padding:%;
 	table-layout:fixed;
 	position:relative;
 }
@@ -102,10 +102,10 @@ border-width: 0 1px 1px 0;
 border-color: white;
 }
 .tabella th:first-child {
-border-top-left-radius: 10%;
+border-top-left-radius: 30%;
 }
 .tabella th:last-child {
-border-top-right-radius: 10%;
+border-top-right-radius: 30%;
 border-right: none;
 }
 .tabella td {
