--- a/Project/WebContent/css/projectStyle.css
+++ b/Project/WebContent/css/projectStyle.css
@@ -1,17 +1,34 @@
 @charset "ISO-8859-1";
 .title{
 	color:white;
-	text-shadow: 2px 2px 4px #c0c0c0;
+	text-shadow: 2px 2px 2px #808080;
 	text-align:center;
 	font-size:30pt;
+	top:5px;
+}
+button{
+  background-color: white; 
+  color: black; 
+  border: 2px solid #008CBA;
+  text-align: center;
+  text-decoration: none;
+   padding: 2px 4px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
 }
 
-
-#gestionesale{
-	background-image: "";
-	 height:auto;
-	 width:auto;
-	 border:1px,solid,black;
+button:hover {
+  background-color: #008CBA;
+  color: white;
+}
+.form-login{
+	margin:11% 35%;
+	background-color:white;
+	padding:1% 3%;
+}
+#login p{
+	text-align:left;
 }
 #login {
 	width:100%;
@@ -28,21 +45,22 @@
 	width:13px;
 	height:13px;
 }
-#msg{
+.msg{
 	color:red;
-	 border:1px,solid,red;
+	font-style:italic;
 }
 .tabella{
 	font:Yasashii;
 	font-size: 18px;
 	border-radius: 1%;
 	text-align: center;
-	border: 1px black solid;
-	background-color:#ffffff;
-	width:100%;
-	height:auto;
+	background-color:#fefc9c;
+	width:80%;
+	left:10%;
+	height:50%;
 	table-layout:fixed;
 	position:relative;
+	border-top-left-radius: 20%;
 }
 .tabella th {
 background: gold;
@@ -50,11 +68,7 @@ color: black;
 text-shadow: 0 1px 1px #c5a770;
 padding: 3% 4%;
 }
-.tabella th, .tabella td {
-border-style: solid;
-border-width: 0 1px 1px 0;
-border-color: white;
-}
+
 .tabella th:first-child {
 border-top-left-radius: 30%;
 }
@@ -64,12 +78,11 @@ border-right: none;
 }
 .tabella td {
 padding: 0.5% 2% ;
-background: #ffffff;
 text-align:center;
 table-layout:fixed;
 }
 .tabella tr:hover{
-	background:#000000;
+	background:#e1e2e0;
 }
 .tabella tr:last-child td:first-child {
 border-radius: 0 0 0 5%;
@@ -80,54 +93,33 @@ border-radius: 0 0 5% 0;
 .tabella tr,  .tabella td:last-child {
 border-right: none;
 }
-.button
-{
-	border-radius:15px;
-	border:1px solid #e8c500;
-	display:inline-block;
-	color:#000000;
-	font-family:Horley Old Style;
-	font-size:20px;
-	padding:7px 25px;
-	text-shadow:0px 1px 0px #c0c0c0;
-	box-shadow: 3px 4px 0px 1px #899599;
-	background-color:gold;
-	width:200px;
-	margin:0 auto;
-	
-}
-.button:hover {
-	background-color:#e8c500;
-}
-.button:active {
-	position:relative;
-	top:1px;
-}
 body, html{
-	/*background-image: url('images/sfondo3.jpg'); 
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-color:#e4e4e4;*/
 	overflow: hidden;
 	width:100%;
 	height:100%;
 	padding:0;
 	margin:0;
+	font-family: Book Antiqua;
+}
+.content{
+	top:16%;
+	position:absolute;
+	width:100%;
+	height:100%;
 }
 .container{
-	opacity:0.8;
-    background-color:#ccc;
     width:100%;
     height:100%;
-    z-index:2000;
+    position:absolute;
 }
 .page{
 	width:100%;
 	height:100%;
 	overflow:hidden;
+	position:static;
 }
 .sub-content{
-	width:64%;
+	width:80%;
 	height:100%; 
 	right:0;
 	text-align:center;
@@ -135,19 +127,41 @@ body, html{
 	position:relative;
 	align-content:center;
 	background-color:white;
-	background-image: url('images/sfondo3.jpg'); 
+	background-image: url('/Project/images/sfondo3.jpg'); 
 	background-size:cover;
-	background-repeat: no-repeat;
-	
+	background-repeat: no-repeat;	
 }
 .header{
 	top: 0;
 	left:0;
 	background-color: #000000;
-	z-index:1000;
+	background-image: url('/Project/images/cinema_logo.jpg');
+	background-size:contain;
+	background-repeat: no-repeat;
+	overflow:hidden;
 	height:15%;
 	width:100%;
 	position:absolute;
 	padding:0;
 	border: 2px solid gold;
+}
+.menu{
+	float:left;
+	width:20%;
+	height:100%; 
+	background:#000000;
+	color:white;
+	text-align:center;
+	position:relative;
+}
+.menu li{
+	padding: 1%;
+	font-size:13pt;
+}
+.form_add{
+	top: 2%;
+    left: 39%;
+    width: 50%;
+    position: relative;
+    text-align: left;
 }
